Updated the type checker message when the resource file of a node is changed. Added AutoFields that are updated in automatically after the typechecker has run over a file. Added size type and format as auto fields in the default template. Added Size Type Format and ResourceLink as required fields. Corrected the resource file open in external application to cope with white space in the path. Added a file select action to the context menu so that the user can select a new resource file for resource nodes.